<resources>
    <string name="app_name">InvisibleInk</string>

    <!-- Generic strings -->
    <string name="empty_string" />
    <string name="loading">Loading..</string>

    <!-- Navigation content -->
    <string name="explore_content">Explore</string>
    <string name="favorites_content">Favorites</string>
    <string name="note_content">Note</string>
    <string name="settings_content">Settings</string>

    <!-- Menu Items -->
    <string name="ar_explore_mode">Explore in AR</string>
    <string name="map_explore_mode">Explore on Map</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>

    <!-- NoteContent Tab -->
    <string name="upload">Upload</string>
    <string name="title_hint">Title</string>
    <string name="body_hint">Body</string>
    <string name="expiration_date_default">Add Expiration Date</string>
    <string name="expiration_date_format">Expires on %s</string>

    <!-- Generic Errors -->
    <string name="error_invalid_device_location">Could not acquire device location.</string>

    <!-- Reporting Notes -->
    <string name="report_dialog_title">Report a Note</string>
    <string name="report_dialog_submit">Submit</string>
    <string name="report_dialog_cancel">Cancel</string>
    <string name="report_type_harassment">Harassment</string>
    <string name="report_type_violence">Violence</string>
    <string name="report_type_sexual">Sexual Content</string>
    <string name="report_comment_hint">Optional comment</string>

    <!-- NoteContent API -->
    <string name="upload_error_generic">Failed to upload note</string>
    <string name="upload_error_bad_sentiment">The content of your note was deemed explicit</string>
    <string name="upload_error_pii">Notes cannot contain identifying information</string>
    <string name="upload_image_error_generic">Failed to upload image</string>
    <string name="invalid_note_title">The note must contain a non-empty title</string>
    <string name="invalid_note_body">The note must contain a non-empty body</string>
    <string name="valid_note">Valid note</string>
    <string name="upload_note_success">Successfully uploaded note</string>
    <string name="upload_image_success">Successfully uploaded note and image</string>

    <!-- Fetch notes API -->
    <string name="error_fetch_notes_generic">Failed to fetch notes</string>
    <string name="error_empty_search">Search query must be non-empty</string>
    <string name="error_invalid_search">Your search was invalid</string>

    <!-- Note interaction messages -->
    <string name="error_upvote_failed">Failed to upvote note</string>
    <string name="error_downvote_failed">Failed to downvote note</string>
    <string name="error_duplicate_vote">Already voted!</string>
    <string name="upvote_success">Upvoted!</string>
    <string name="downvote_success">Downvoted!</string>
    <string name="error_report_failed">Failed to submit report</string>
    <string name="error_type_report_failed">Report Type not selected!</string>
    <string name="upload_report_cancelled">Report cancelled!</string>
    <string name="upload_report_success">Successfully submitted report!</string>


    <!-- Permission messages -->
    <string name="image_picker_title">Add a photo</string>
    <string name="error_adding_image">Failed to add photo</string>
    <string name="missing_permission_camera">Camera permission is required for this action</string>
    <string name="missing_permission_storage">Storage permission is required for this action</string>

    <!-- Preferences -->
    <string name="pref_category_advanced_key">pref_category_advanced</string>
    <string name="pref_category_advanced_title">Advanced</string>
    <string name="pref_category_help_key">pref_category_help</string>
    <string name="pref_category_help_title">Help</string>

    <string name="pref_server_address_key">pref_server_address</string>
    <string name="pref_server_address_title">Note Server Address</string>
    <string name="pref_server_address_summary">Connect to custom Note server</string>

    <string name="pref_faq_key">pref_faq</string>
    <string name="pref_faq_title">FAQ</string>
    <string name="pref_faq_summary">Learn more about InvisibleInk</string>

    <string name="pref_feedback_key">pref_feedback</string>
    <string name="pref_feedback_title">Feedback</string>
    <string name="pref_feedback_summary">Report technical issues or suggest new features</string>

    <string name="pref_category_dev_key">pref_category_dev</string>
    <string name="pref_category_dev_title">Development</string>

    <string name="pref_category_vote_db_clear_key">pref_category_vote_db_clear</string>
    <string name="pref_category_vote_db_clear_title">Clear Votes</string>
    <string name="pref_category_vote_db_clear_summary">Clear the device store of note votes</string>

    <string name="pref_category_vote_db_upvote_key">pref_category_vote_db_upvote</string>
    <string name="pref_category_vote_db_upvote_title">Up-vote</string>
    <string name="pref_category_vote_db_upvote_summary">Add a random up-vote to the db</string>

    <string name="pref_category_vote_db_downvote_key">pref_category_vote_db_downvote</string>
    <string name="pref_category_vote_db_downvote_title">Down-vote</string>
    <string name="pref_category_vote_db_downvote_summary">Add a random down-vote to the db</string>

    <string name="pref_category_vote_db_load_all_key">pref_category_vote_db_load_all</string>
    <string name="pref_category_vote_db_load_all_title">Log All</string>
    <string name="pref_category_vote_db_load_all_summary">Output all the votes in the logs</string>

    <string name="pref_category_report_key">pref_category_report</string>
    <string name="pref_category_report_title">Report Note</string>
    <string name="pref_category_report_summary">Test the report functionality.</string>

    <!-- Search filter options -->
    <string name="search_hint">Keywords</string>

    <!-- Image filter options -->
    <string name="filter_image_options">pref_category_vote_db_load_all</string>
    <string name="image_options_no_preference">No Preference</string>
    <string name="image_options_with_image">Contains image</string>
    <string name="image_options_without_image">Does not contain image</string>

    <string-array name="image_options">
        <item>@string/image_options_no_preference</item>
        <item>@string/image_options_with_image</item>
        <item>@string/image_options_without_image</item>
    </string-array>

    <!-- Limit filter options -->
    <string name="limit_options_no_preference">All Notes</string>
    <string name="limit_options_note_limit_template">%d Notes</string>

    <string-array name="limit_options">
        <item>@string/limit_options_no_preference</item>
        <item>5 Notes</item>
        <item>10 Notes</item>
        <item>100 Notes</item>
    </string-array>

    <!-- Rank filter options -->
    <string name="rank_options_no_preference">Relevant</string>
    <string name="rank_options_newest">Newest</string>
    <string name="rank_options_best">Best</string>
    <string name="rank_options_worst">Worst</string>

    <string-array name="rank_options">
        <item>@string/rank_options_no_preference</item>
        <item>@string/rank_options_newest</item>
        <item>@string/rank_options_best</item>
        <item>@string/rank_options_worst</item>
    </string-array>

</resources>
