<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="@string/pref_category_advanced_key"
        app:title="@string/pref_category_advanced_title">

        <EditTextPreference
            app:key="@string/pref_server_address_key"
            app:summary="@string/pref_server_address_summary"
            app:title="@string/pref_server_address_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/pref_category_help_key"
        app:title="@string/pref_category_help_title">

        <Preference
            app:key="@string/pref_feedback_key"
            app:summary="@string/pref_feedback_summary"
            app:title="@string/pref_feedback_title" />


        <Preference
            app:key="@string/pref_faq_key"
            app:summary="@string/pref_faq_summary"
            app:title="@string/pref_faq_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/pref_category_dev_key"
        app:title="@string/pref_category_dev_title">

        <Preference
            app:key="@string/pref_category_vote_db_load_all_key"
            app:summary="@string/pref_category_vote_db_load_all_summary"
            app:title="@string/pref_category_vote_db_load_all_title" />


        <Preference
            app:key="@string/pref_category_vote_db_clear_key"
            app:summary="@string/pref_category_vote_db_clear_summary"
            app:title="@string/pref_category_vote_db_clear_title" />

        <Preference
            app:key="@string/pref_category_vote_db_upvote_key"
            app:summary="@string/pref_category_vote_db_upvote_summary"
            app:title="@string/pref_category_vote_db_upvote_title" />

        <Preference
            app:key="@string/pref_category_vote_db_downvote_key"
            app:summary="@string/pref_category_vote_db_downvote_summary"
            app:title="@string/pref_category_vote_db_downvote_title" />


    </PreferenceCategory>

</PreferenceScreen>
