<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_l"
    app:cardCornerRadius="@dimen/spacing_xs">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing_s">

        <ProgressBar
            android:id="@+id/noteUploadProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addPhoto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/spacing_s"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@id/titleLayout"
            app:layout_constraintEnd_toStartOf="@id/titleLayout"
            app:layout_constraintHorizontal_weight="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/titleLayout"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_s"
            android:hint="@string/title_hint"
            app:layout_constrainedHeight="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.8"
            app:layout_constraintStart_toEndOf="@id/addPhoto"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/titleRowContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="addPhoto,titleLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bodyLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_s"
            android:hint="@string/body_hint"
            app:layout_constraintBottom_toTopOf="@id/buttonRow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleRowContent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="start" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttonRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:orientation="horizontal"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/expirationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expiration_date_default" />

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/upload" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>